tests/spec/emit/snapshots/fused_partial_match_on_go_write_call.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:os"
  import "go:fmt"
  
  fn write_all(file: Ref<os.File>) {
    match file.Write(['h', 'i']) {
      Ok(n) => fmt.Println(n),
      Both(n, _) => fmt.Println(n),
      Err(e) => {
        fmt.Println(e)
        return
      },
    }
  }
---
package main

import (
	"fmt"
	"os"
)

func writeAll(file *os.File) {
	ret_1, e := file.Write([]byte{'h', 'i'})
	if e == nil {
		n := ret_1
		fmt.Println(n)
	} else {
		n := ret_1
		fmt.Println(n)
	}
}
