tests/spec/emit/snapshots/fused_partial_match_on_lowered_call.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:errors"
  
  fn attempt(ok: bool) -> Partial<int, error> {
    if ok { Partial.Ok(1) } else { Partial.Err(errors.New("nope")) }
  }
  
  fn test() -> int {
    match attempt(true) {
      Partial.Ok(n) => n,
      Partial.Both(n, _) => n,
      Partial.Err(_) => 0,
    }
  }
---
package main

import "errors"

func attempt(ok bool) (int, error) {
	if ok {
		return 1, nil
	}
	return 0, errors.New("nope")
}

func test() int {
	if n, err := attempt(true); err == nil {
		return n
	} else {
		return n
	}
}
