tests/spec/emit/snapshots/fused_propagate_discards_and_binds_the_ok_value.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  import "go:fmt"
  import "go:strconv"
  
  fn option_targets(db: Map<int, string>) -> Option<string> {
    db.get(1)?
    let _ = db.get(2)?
    let name = db.get(3)?
    Some(name)
  }
  
  fn mapped_targets(db: Map<int, string>, s: string) -> Result<int, error> {
    strconv.Atoi(s).map_err(|e| fmt.Errorf("first: %w", e))?
    let _ = db.get(1).ok_or(errors.New("missing"))?
    let n = strconv.Atoi(s).map_err(|e| fmt.Errorf("third: %w", e))?
    Ok(n)
  }
  
  fn call_targets(s: string) -> Result<int, error> {
    strconv.Atoi(s)?
    let _ = strconv.Atoi(s)?
    let n = strconv.Atoi(s)?
    Ok(n)
  }
  
  fn test() {
    let db = Map.from([(1, "a"), (2, "b"), (3, "c")])
    if option_targets(db) != Some("c") { panic("every key is present") }
    if mapped_targets(db, "4").unwrap_or(0) != 4 { panic("a number should parse") }
    if call_targets("x").is_ok() { panic("a word should fail") }
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func optionTargets(db map[int]string) (string, bool) {
	if _, ok := db[1]; !ok {
		return "", false
	}
	if _, ok := db[2]; !ok {
		return "", false
	}
	name, ok := db[3]
	if !ok {
		return "", false
	}
	return name, true
}

func mappedTargets(db map[int]string, s string) (int, error) {
	_, err := strconv.Atoi(s)
	if err != nil {
		return 0, fmt.Errorf("first: %w", err)
	}
	_, ok := db[1]
	failure := errors.New("missing")
	if !ok {
		return 0, failure
	}
	n, err_1 := strconv.Atoi(s)
	if err_1 != nil {
		return 0, fmt.Errorf("third: %w", err_1)
	}
	return n, nil
}

func callTargets(s string) (int, error) {
	if _, err := strconv.Atoi(s); err != nil {
		return 0, err
	}
	if _, err := strconv.Atoi(s); err != nil {
		return 0, err
	}
	n, err := strconv.Atoi(s)
	if err != nil {
		return 0, err
	}
	return n, nil
}

func test() {
	db := map[int]string{1: "a", 2: "b", 3: "c"}
	option := lisette.OptionFromCommaOk[string](optionTargets(db))
	if option != lisette.MakeOptionSome("c") {
		panic("every key is present")
	}
	ret, err := mappedTargets(db, "4")
	if err != nil {
		ret = 0
	}
	if ret != 4 {
		panic("a number should parse")
	}
	if _, err := callTargets("x"); err == nil {
		panic("a word should fail")
	}
}
