tests/spec/emit/snapshots/fused_result_match_ok_unused_named_payload.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn fallible(ok: bool) -> Result<int, error> {
    if ok { Ok(1) } else { Err(errors.New("nope")) }
  }
  
  fn test() {
    match fallible(true) {
      Ok(x) => {},
      Err(e) => { let _ = e },
    }
  }
---
package main

import "errors"

func fallible(ok bool) (int, error) {
	if ok {
		return 1, nil
	}
	return 0, errors.New("nope")
}

func test() {
	if _, e := fallible(true); e != nil {
		_ = e
	}
}
