tests/spec/emit/snapshots/fused_selective_partial_both_omits_unused_named_value.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  import "go:os"
  
  fn write(file: Ref<os.File>) -> Option<error> {
    if let Partial.Both(written, err) = file.Write(['h', 'i']) {
      return Some(err)
    }
    None
  }
---
package main

import "os"

func write(file *os.File) error {
	if _, err := file.Write([]byte{'h', 'i'}); err != nil {
		return err
	}
	return nil
}
