tests/spec/emit/snapshots/fused_selective_partial_err_checks_nilable_value.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    match aws.Read() {
      Partial.Err(e) => fmt.Println("err", e),
      _ => {},
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
)

func main() {
	if ret, e := aws.Read(); e != nil && ret == nil {
		fmt.Println("err", e)
	}
}
